--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,4 +9,6 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Melee.Attack",DevComment="Triggered when activating melee attack")
++GameplayTagList=(Tag="Event.Melee.Continue",DevComment="")
++GameplayTagList=(Tag="Event.Melee.Recover",DevComment="")
 
