--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,17 @@ GameName=MirrorOfShadows
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/MyContent/Blueprints/GM_GASInputTest.GM_GASInputTest_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
@@ -196,6 +201,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/MirrorOfShadows")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/MirrorOfShadows")
+AssetManagerClassName=/Script/MirrorOfShadows.ISAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
