Did damage calculation, now need to find a way to capture it outside the calculation.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Damage.SkillModifier",DevComment="Skill Modifier for attacks")
 +GameplayTagList=(Tag="Event.Melee.Attack",DevComment="Triggered when activating melee attack")
 +GameplayTagList=(Tag="Event.Melee.Continue",DevComment="")
 +GameplayTagList=(Tag="Event.Melee.Recover",DevComment="")
