Added perfect dodge system with slow motion effect.
Will need to add ability to interrupt it with counter edge during slow motion and potentially allow swap in counter edge for first switch skill.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,10 +6,14 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Effect.SuperBuff",NewTagName="Effect.Defensive")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Input.Dodge",DevComment="")
 +GameplayTagList=(Tag="Ability.Input.Skill",DevComment="")
 +GameplayTagList=(Tag="Damage.SkillModifier",DevComment="Skill Modifier for attacks")
++GameplayTagList=(Tag="Effect.Defensive",DevComment="")
++GameplayTagList=(Tag="Effect.Defensive.Evade",DevComment="")
 +GameplayTagList=(Tag="Equipment.Armor.Chestplate",DevComment="")
 +GameplayTagList=(Tag="Equipment.Armor.Helmet",DevComment="")
 +GameplayTagList=(Tag="Event.Melee.Attack",DevComment="Triggered when activating melee attack")
