--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Damage.SkillModifier",DevComment="Skill Modifier for attacks")
 +GameplayTagList=(Tag="Effect.Defensive",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.Evade",DevComment="")
++GameplayTagList=(Tag="Effect.Defensive.PerfectDodge",DevComment="")
 +GameplayTagList=(Tag="Equipment.Armor.Chestplate",DevComment="")
 +GameplayTagList=(Tag="Equipment.Armor.Helmet",DevComment="")
 +GameplayTagList=(Tag="Event.Melee.Attack",DevComment="Triggered when activating melee attack")
