Establish a baseline poise damage system to apply but still need to implement actual interruption.
Will also remove the GEC_PoiseDMG as its no longer needed.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Input.Dodge",DevComment="")
 +GameplayTagList=(Tag="Ability.Input.Skill",DevComment="")
 +GameplayTagList=(Tag="Damage.SkillModifier",DevComment="Skill Modifier for attacks")
++GameplayTagList=(Tag="Damage.Stagger.Poise",DevComment="")
++GameplayTagList=(Tag="Damage.Stagger.Stance",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.Evade",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.PerfectDodge",DevComment="")
