--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -201,7 +201,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/MirrorOfShadows")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/MirrorOfShadows")
-AssetManagerClassName=/Script/MirrorOfShadows.ISAssetManager
+AssetManagerClassName=/Script/Engine.AssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
