--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,6 +17,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Effect.Defensive",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.Evade",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.PerfectDodge",DevComment="")
++GameplayTagList=(Tag="Effect.State.AttackDelay",DevComment="")
 +GameplayTagList=(Tag="Effect.State.PoiseBroken",DevComment="")
 +GameplayTagList=(Tag="Effect.State.StanceBroken",DevComment="")
 +GameplayTagList=(Tag="Equipment.Armor.Chestplate",DevComment="")
