Created block (without damage mitigation) and a hit block reaction.
Will need to create damage mitigation variable, unify the stagger component with an OnHit event in the base CPP file and have stagger anims accessible from the very base to minimize casting calls.

Also implement parry.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Damage.Stagger.Poise",DevComment="")
 +GameplayTagList=(Tag="Damage.Stagger.Stance",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive",DevComment="")
++GameplayTagList=(Tag="Effect.Defensive.Block",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.Evade",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.PerfectDodge",DevComment="")
 +GameplayTagList=(Tag="Effect.State.AttackDelay",DevComment="")
