--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Input.Dodge",DevComment="")
 +GameplayTagList=(Tag="Ability.Input.NormalAttack",DevComment="")
 +GameplayTagList=(Tag="Ability.Input.Skill",DevComment="")
++GameplayTagList=(Tag="Damage.Health.Light",DevComment="")
++GameplayTagList=(Tag="Damage.Health.Physical",DevComment="")
 +GameplayTagList=(Tag="Damage.SkillModifier",DevComment="Skill Modifier for attacks")
 +GameplayTagList=(Tag="Damage.Stagger.Poise",DevComment="")
 +GameplayTagList=(Tag="Damage.Stagger.Stance",DevComment="")
