Created cooldown system and rudimentary move selector once ready to attack.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,7 @@ ProjectName=Third Person BP Game Template
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/GameplayAbilitiesEditor.GameplayEffectCreationMenu]
++Definitions=(MenuPath="",BaseName="",ParentGameplayEffect="/Script/Engine.BlueprintGeneratedClass'/Game/MyContent/Blueprints/GameplayEffect/GE_Damage.GE_Damage_C'")
+
