--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,7 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Effect.SuperBuff",NewTagName="")
 +GameplayTagRedirects=(OldTagName="Effect.SuperBuff",NewTagName="Effect.Defensive")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
@@ -30,6 +31,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Melee.Attack",DevComment="Triggered when activating melee attack")
 +GameplayTagList=(Tag="Event.Melee.Continue",DevComment="")
 +GameplayTagList=(Tag="Event.Melee.Recover",DevComment="")
++GameplayTagList=(Tag="Skill.Cooldown.Enemy.Regular.Skill1",DevComment="")
 +GameplayTagList=(Tag="Skill.Cooldown.Parry",DevComment="")
 +GameplayTagList=(Tag="Stats.Flat.HP",DevComment="")
 +GameplayTagList=(Tag="Stats.Percent.ATK",DevComment="")
