Enemy now evades when struck by an attack and off its 15 second evade cooldown. Upon react evading, it will negate damage received.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -32,6 +32,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Melee.Continue",DevComment="")
 +GameplayTagList=(Tag="Event.Melee.Recover",DevComment="")
 +GameplayTagList=(Tag="Skill.Cooldown.Enemy.Regular.Skill1",DevComment="")
++GameplayTagList=(Tag="Skill.Cooldown.Evade",DevComment="")
 +GameplayTagList=(Tag="Skill.Cooldown.Parry",DevComment="")
 +GameplayTagList=(Tag="Stats.Flat.HP",DevComment="")
 +GameplayTagList=(Tag="Stats.Percent.ATK",DevComment="")
