set us some vs config files and disabled nanite (probably) in default engine ini

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,6 +62,7 @@ r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Nanite.ProjectEnabled=False
+r.Nanite = 0
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=False
