Added ondeath function and allowed virtual textures.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/MyContent/Blueprints/GM_GASInputTest.GM_GASInputTest_C
+GlobalDefaultGameMode=/Game/MyContent/Blueprints/GameModes/BP_CombatGameMode.BP_CombatGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
@@ -32,7 +32,7 @@ r.MinScreenRadiusForCSMDepth=0.010000
 r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
-r.VirtualTextures=False
+r.VirtualTextures=True
 r.VT.EnableAutoImport=True
 r.VirtualTexturedLightmaps=False
 r.VT.AnisotropicFiltering=False
