Added death animation and dead effect.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -24,6 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Effect.Defensive.Parry",DevComment="")
 +GameplayTagList=(Tag="Effect.Defensive.PerfectDodge",DevComment="")
 +GameplayTagList=(Tag="Effect.State.AttackDelay",DevComment="")
++GameplayTagList=(Tag="Effect.State.Dead",DevComment="")
 +GameplayTagList=(Tag="Effect.State.PoiseBroken",DevComment="")
 +GameplayTagList=(Tag="Effect.State.StanceBroken",DevComment="")
 +GameplayTagList=(Tag="Equipment.Armor.Chestplate",DevComment="")
